--- a/css/destino.css
+++ b/css/destino.css
@@ -260,7 +260,7 @@ main {
     background-color: whitesmoke;
     border-radius: 10px;
     padding: 1.5rem;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
     margin: 1rem;
     text-align: center;
     width: 100%; }
@@ -286,7 +286,8 @@ main {
     border-radius: 10px;
     border-width: 0.5px;
     border-color: #E9ECEF;
-    margin: 1px auto; }
+    margin: 1px auto;
+    font-family: 'DM Sans', sans-serif; }
 
 #cuerpo-inicio {
   display: flex;
@@ -295,13 +296,31 @@ main {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap; }
+    #cuerpo-inicio section p {
+      font-size: 0.8rem;
+      font-weight: 200;
+      margin: 0.3rem auto; }
     #cuerpo-inicio section #card-saldo-pesos, #cuerpo-inicio section #card-saldo-dolares {
       width: 50%;
       height: auto;
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center; }
+      #cuerpo-inicio section #card-saldo-pesos #container-saldo, #cuerpo-inicio section #card-saldo-dolares #container-saldo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        padding: 1rem;
+        background-color: #E9ECEF;
+        width: 60%;
+        height: 65px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        margin-bottom: 0.5rem; }
+        #cuerpo-inicio section #card-saldo-pesos #container-saldo p, #cuerpo-inicio section #card-saldo-dolares #container-saldo p {
+          font-size: 1rem;
+          font-weight: 700; }
     #cuerpo-inicio section #card-ingresar-dinero, #cuerpo-inicio section #card-transferir-dinero {
       width: 50%; }
     #cuerpo-inicio section .transaccion {
@@ -309,10 +328,42 @@ main {
       flex-direction: row;
       align-items: center;
       border-radius: 10px;
-      border: 0.5px solid #333533;
+      border: 0.8px solid rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
       padding: 0.8rem; }
     #cuerpo-inicio section #saldo-pesos, #cuerpo-inicio section #saldo-dolares {
       font-size: 2.3rem;
       font-weight: 700;
       color: #20db58;
       padding-bottom: 3rem; }
+    #cuerpo-inicio section #tasa-compra-usd, #cuerpo-inicio section #tasa-venta-usd {
+      font-weight: bold; }
+  #cuerpo-inicio .cripto-list {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap; }
+    #cuerpo-inicio .cripto-list .card-cripto-list {
+      width: 100%;
+      height: 50px;
+      margin-top: 0.8rem;
+      padding: 0.5rem 2rem 0.5rem 2.5rem;
+      border-radius: 10px;
+      border: 0.5px solid rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #E9ECEF; }
+      #cuerpo-inicio .cripto-list .card-cripto-list .cripto-img {
+        height: 100%; }
+        #cuerpo-inicio .cripto-list .card-cripto-list .cripto-img img {
+          height: 100%;
+          vertical-align: middle; }
+      #cuerpo-inicio .cripto-list .card-cripto-list .cripto-name {
+        width: 40%;
+        text-align: left; }
+      #cuerpo-inicio .cripto-list .card-cripto-list .cripto-ticker {
+        width: 20%; }
+      #cuerpo-inicio .cripto-list .card-cripto-list .cripto- {
+        width: 30%; }
