--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -42,6 +42,7 @@ main{
         border-width: 0.5px;
         border-color: $background-main;
         margin: 1px auto;
+        font-family: 'DM Sans', sans-serif;
     }
 }
         
@@ -53,13 +54,34 @@ main{
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
+        p{
+            font-size: 0.8rem;
+            font-weight: 200;
+            margin: 0.3rem auto;
+        }
         #card-saldo-pesos , #card-saldo-dolares{
             width: 50%;
             height: auto; 
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;  
+            justify-content: space-between;
+            align-items: center;
+            #container-saldo{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 20px;
+                padding: 1rem;
+                background-color: $background-main;
+                width: 60%;
+                height: 65px;
+                box-shadow: 0px 0px 5px $shadow;
+                margin-bottom: 0.5rem;
+                p{
+                    font-size: 1rem;
+                font-weight: 700;
+                }
+            }  
         }
         #card-ingresar-dinero , #card-transferir-dinero{
             width: 50%;
@@ -69,7 +91,8 @@ main{
             flex-direction: row;
             align-items: center;
             border-radius: 10px;
-            border: 0.5px solid $background-nav-link;
+            border: 0.8px solid $shadow;
+            box-shadow: 0px 0px 5px $shadow;
             padding: 0.8rem;
         }
         #saldo-pesos , #saldo-dolares{
@@ -77,6 +100,46 @@ main{
             font-weight: 700;
             color: $saldo;
             padding-bottom: 3rem;
+        }
+        #tasa-compra-usd , #tasa-venta-usd{
+            font-weight: bold;
+        }
+    }
+
+    .cripto-list{
+        margin: 1rem;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        .card-cripto-list{
+            width: 100%;
+            height: 50px;
+            margin-top: 0.8rem;
+            padding: 0.5rem 2rem 0.5rem 2.5rem;
+            border-radius: 10px;
+            border: 0.5px solid $shadow;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-between;
+            align-items: center;
+            background-color: $background-main;
+            .cripto-img{
+                height: 100%;
+                img{
+                    height: 100%;
+                    vertical-align: middle;
+                }
+            }
+            .cripto-name{
+                width: 40%;
+                text-align: left;
+            }
+            .cripto-ticker{
+                width: 20%;
+            }
+            .cripto-{
+                width: 30%;
+            }
         }
     }
 }
