--- a/sass/origen.css
+++ b/sass/origen.css
@@ -428,8 +428,8 @@ main .card-container {
   background-color: whitesmoke;
   border-radius: 10px;
   padding: 1.5rem;
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-          box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
   margin: 1rem;
   text-align: center;
   width: 100%;
@@ -463,6 +463,7 @@ main input {
   border-width: 0.5px;
   border-color: #E9ECEF;
   margin: 1px auto;
+  font-family: 'DM Sans', sans-serif;
 }
 
 #cuerpo-inicio {
@@ -487,6 +488,12 @@ main input {
       flex-wrap: nowrap;
 }
 
+#cuerpo-inicio section p {
+  font-size: 0.8rem;
+  font-weight: 200;
+  margin: 0.3rem auto;
+}
+
 #cuerpo-inicio section #card-saldo-pesos, #cuerpo-inicio section #card-saldo-dolares {
   width: 50%;
   height: auto;
@@ -497,12 +504,37 @@ main input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#cuerpo-inicio section #card-saldo-pesos #container-saldo, #cuerpo-inicio section #card-saldo-dolares #container-saldo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 20px;
+  padding: 1rem;
+  background-color: #E9ECEF;
+  width: 60%;
+  height: 65px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  margin-bottom: 0.5rem;
+}
+
+#cuerpo-inicio section #card-saldo-pesos #container-saldo p, #cuerpo-inicio section #card-saldo-dolares #container-saldo p {
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 #cuerpo-inicio section #card-ingresar-dinero, #cuerpo-inicio section #card-transferir-dinero {
@@ -521,7 +553,9 @@ main input {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 10px;
-  border: 0.5px solid #333533;
+  border: 0.8px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   padding: 0.8rem;
 }
 
@@ -530,5 +564,67 @@ main input {
   font-weight: 700;
   color: #20db58;
   padding-bottom: 3rem;
+}
+
+#cuerpo-inicio section #tasa-compra-usd, #cuerpo-inicio section #tasa-venta-usd {
+  font-weight: bold;
+}
+
+#cuerpo-inicio .cripto-list {
+  margin: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list {
+  width: 100%;
+  height: 50px;
+  margin-top: 0.8rem;
+  padding: 0.5rem 2rem 0.5rem 2.5rem;
+  border-radius: 10px;
+  border: 0.5px solid rgba(0, 0, 0, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #E9ECEF;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list .cripto-img {
+  height: 100%;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list .cripto-img img {
+  height: 100%;
+  vertical-align: middle;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list .cripto-name {
+  width: 40%;
+  text-align: left;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list .cripto-ticker {
+  width: 20%;
+}
+
+#cuerpo-inicio .cripto-list .card-cripto-list .cripto- {
+  width: 30%;
 }
 /*# sourceMappingURL=origen.css.map */
